# ruetest

.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
